# codex_mcp

./: .gitignore  MCP server output.txt  README.md  codex-resume.txt  pyproject.toml  system_message_appendix.txt
codex_async_mcp/: cli.py  client.py  server.py
codex_async_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
codex_mcp/: __init__.py  client.py  jobs.py  server.py
tests/: test_cli.py  test_client_reader.py  test_jobs.py
