[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-async-mcp"
version = "0.1.0"
description = "Async MCP client wrapper around `codex mcp-server`"
authors = [{ name = "Codex User" }]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
dependencies = [
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
codex-async-mcp = "codex_async_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codex_async_mcp*"]
